# fluke

./: .gitignore  README.md  pyproject.toml
experiments/: run_benchmark.py  run_experiments.py  run_full_benchmark.py
fluke/: __init__.py
fluke/evaluation/: __init__.py  benchmarks.py  lotte.py
fluke/indexing/: __init__.py  indexer.py  searcher.py
fluke/models/: __init__.py  colbert.py  encoders.py  fluke_model.py  fluke_plus.py
fluke/scoring/: __init__.py  adaptive_calibration.py  fluke_scoring.py  maxsim.py  multi_granularity.py
fluke/training/: trainer.py
results/: e2e_results.json  e2e_v2_results.json  e2e_v3_results.json  experiment_results.json  full_benchmark_results.json
